--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -130,16 +130,12 @@ body {
   margin-bottom: 10px;
   margin-top: 10px;
   margin-right: 2px;
-  margin-left: 0px;
+  margin-left: 2px;
   text-decoration: none;
   cursor: pointer;
 }
 .menu-company a * {
   cursor: pointer;
-}
-.menu-company a.pull-right {
-  margin-left: 2px;
-  margin-right: 0px;
 }
 .menu-company a:hover {
   color: #fff;
@@ -1009,61 +1005,61 @@ body {
   padding: 5px 35px;
 }
 /* --- MESSENGER --- */
-.search-friends {
+.delme-search-friends {
   margin-bottom: 10px;
   margin-top: 15px;
 }
-.messenger-block {
+.delme-messenger-block {
   border: 1px solid #DCE4EC;
   margin-bottom: 100px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.messenger-block .friends-block .friend-contact {
+.delme-messenger-block .friends-block .friend-contact {
   padding-right: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid #DCE4EC;
 }
-.messenger-block .friends-block .friend-contact img {
+.delme-messenger-block .friends-block .friend-contact img {
   width: 40px;
 }
-.messenger-block .friends-block .friend-contact .name {
+.delme-messenger-block .friends-block .friend-contact .name {
   color: #000;
 }
-.messenger-block .friends-block .friend-contact .date {
+.delme-messenger-block .friends-block .friend-contact .date {
   color: #909090;
 }
-.messenger-block .message-block {
+.delme-messenger-block .message-block {
   border-left: 1px solid #DCE4EC;
   border-right: 1px solid #DCE4EC;
   padding-top: 15px;
 }
-.messenger-block .message-block .avatar {
+.delme-messenger-block .message-block .avatar {
   width: 45px;
   margin: 6px 0px 0px 20px;
 }
-.messenger-block .message-block .message-text span {
+.delme-messenger-block .message-block .message-text span {
   color: #C70000;
   font-size: 14px;
 }
-.messenger-block .message-block .message-text p {
+.delme-messenger-block .message-block .message-text p {
   font-size: 12px;
   color: #000;
 }
-.messenger-block .message-block span {
+.delme-messenger-block .message-block span {
   font-size: 12px;
   color: #909090;
 }
-.messenger-block .message-block .add-message {
+.delme-messenger-block .message-block .add-message {
   border-top: 1px solid #ECF0F1;
 }
-.messenger-block .message-block .add-message textarea {
+.delme-messenger-block .message-block .add-message textarea {
   width: 94%;
   margin-left: 3%;
   margin-top: 3%;
   border-color: #DCE4EC;
 }
-.messenger-block .message-block .add-message button {
+.delme-messenger-block .message-block .add-message button {
   float: right;
   margin-right: 3%;
   background-color: #00c853;
@@ -1072,7 +1068,7 @@ body {
   color: #fff;
   padding: 5px 15px;
 }
-.mess-bg {
+.delme-mess-bg {
   background-image: url("../images/develop-img.jpeg");
   background-size: cover;
   min-height: 100%;
@@ -1083,7 +1079,7 @@ body {
   top: 0;
   left: 0;
 }
-.mess-bg .msg-message-user h3 {
+.delme-mess-bg .msg-message-user h3 {
   text-align: center;
   margin-top: 300px;
   background-color: rgba(255, 0, 0, 0.47);
@@ -1259,100 +1255,6 @@ body {
     margin-top: 20%;
   }
 }
-.panel-scroll-chat ul {
-  list-style: none;
-}
-.panel-scroll-chat .mar-btm {
-  padding-bottom: 15px;
-}
-.panel-scroll-chat .pad-all {
-  padding: 15px;
-}
-.panel-scroll-chat .media-block .media-left {
-  display: block;
-  float: left;
-}
-.panel-scroll-chat .img-sm {
-  width: 46px;
-  height: 46px;
-}
-.panel-scroll-chat .media-block .media-body {
-  display: block;
-  overflow: hidden;
-  width: auto;
-}
-.panel-scroll-chat .pad-hor {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.panel-scroll-chat .speech {
-  position: relative;
-  background: #b7dcfe;
-  color: #317787;
-  display: inline-block;
-  border-radius: 0;
-  padding: 12px 20px;
-  max-width: 100%;
-}
-.panel-scroll-chat p.speech-content {
-  width: 100%;
-  overflow-x: auto;
-}
-.panel-scroll-chat .speech:before {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 0;
-  height: 0;
-  left: 0;
-  top: 0;
-  border-top: 7px solid transparent;
-  border-bottom: 7px solid transparent;
-  border-right: 7px solid #b7dcfe;
-  margin: 15px 0 0 -6px;
-}
-.panel-scroll-chat .speech-right > .speech:before {
-  left: auto;
-  right: 0;
-  border-top: 7px solid transparent;
-  border-bottom: 7px solid transparent;
-  border-left: 7px solid #ffdc91;
-  border-right: 0;
-  margin: 15px -6px 0 0;
-}
-.panel-scroll-chat .speech .media-heading {
-  font-size: 1.2em;
-  color: #317787;
-  display: block;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  font-weight: 300;
-}
-.panel-scroll-chat .speech-time {
-  margin-top: 20px;
-  margin-bottom: 0;
-  font-size: .8em;
-  font-weight: 300;
-}
-.panel-scroll-chat .media-block .media-right {
-  float: right;
-}
-.panel-scroll-chat .speech-right {
-  text-align: right;
-}
-.panel-scroll-chat .pad-hor {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.panel-scroll-chat .speech-right > .speech {
-  background: #ffda87;
-  color: #a07617;
-  text-align: right;
-}
-.panel-scroll-chat .speech-right > .speech .media-heading {
-  color: #a07617;
-}
 #user_controller-controller {
   background-color: #212121;
   padding-bottom: 10px;
@@ -1365,5 +1267,147 @@ body {
 }
 #user_controller-controller ul {
   margin-top: 20px;
+}
+#messenger-controller .messenger-avatar {
+  width: 40px;
+  height: 40px;
+  left: 5px;
+  top: 5px;
+  border-radius: 50%;
+}
+#messenger-controller ul,
+#messenger-controller li {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+#messenger-controller .chat-window .panel-footer textarea,
+#messenger-controller .chat-window .panel-footer button {
+  height: 5em;
+}
+#messenger-controller .chat-window .panel-body {
+  height: 30em;
+  padding: 5px 5px 5px 15px;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+#messenger-controller .chat-window .panel-scroll-chat {
+  height: 100%;
+  padding-right: 5px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+#messenger-controller .chat-window .panel-scroll-chat .mar-btm {
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+#messenger-controller .chat-window .panel-scroll-chat .pad-all {
+  padding: 15px;
+}
+#messenger-controller .chat-window .panel-scroll-chat .media-block .media-left {
+  display: block;
+  float: left;
+}
+#messenger-controller .chat-window .panel-scroll-chat .img-sm {
+  width: 46px;
+  height: 46px;
+}
+#messenger-controller .chat-window .panel-scroll-chat .media-block .media-body {
+  display: block;
+  overflow: hidden;
+  width: auto;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech {
+  position: relative;
+  background: #b7dcfe;
+  color: #317787;
+  display: inline-block;
+  border-radius: 0;
+  padding: 12px 20px;
+  max-width: 100%;
+}
+#messenger-controller .chat-window .panel-scroll-chat p.speech-content {
+  width: 100%;
+  overflow-x: auto;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 0;
+  top: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-right: 7px solid #b7dcfe;
+  margin: 15px 0 0 -6px;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech-right > .speech:before {
+  left: auto;
+  right: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-left: 7px solid #ffdc91;
+  border-right: 0;
+  margin: 15px -6px 0 0;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech .media-heading {
+  font-size: 1.2em;
+  color: #317787;
+  display: block;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  font-weight: 300;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech-time {
+  margin-top: 5px;
+  margin-bottom: 0;
+  font-size: .8em;
+  font-weight: 300;
+}
+#messenger-controller .chat-window .panel-scroll-chat .media-block .media-right {
+  float: right;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech-right {
+  text-align: right;
+}
+#messenger-controller .chat-window .panel-scroll-chat .pad-hor {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech-right > .speech {
+  background: #ffda87;
+  color: #a07617;
+  text-align: right;
+}
+#messenger-controller .chat-window .panel-scroll-chat .speech-right > .speech .media-heading {
+  color: #a07617;
+}
+#messenger-controller .chat-window .panel-scroll-chat span.session-name {
+  font-size: 7px;
+  color: #777;
+}
+#messenger-controller .messenger-chat .contacts-window {
+  height: 545px;
+}
+#messenger-controller .messenger-chat .contacts-window .contact-list {
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 506px;
+  margin-top: 3px;
+  padding: 0px;
+}
+#messenger-controller .messenger-chat .contacts-window li {
+  margin-bottom: 5px;
+  padding: 5px;
+}
+#messenger-controller .messenger-chat .contacts-window li.selected {
+  color: white;
+  background-color: #00ceb1;
+}
+#messenger-controller .messenger-notification .panel-body {
+  height: 36em;
 }
 /*# sourceMappingURL=style.css.map */
