--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -157,18 +157,13 @@ body {
     margin-bottom: 10px;
     margin-top: 10px;
     margin-right: 2px;
-    margin-left: 0px;
+    margin-left: 2px;
     text-decoration: none;
     cursor:pointer;
   }
 
   a * {
     cursor:pointer;
-  }
-
-  a.pull-right {
-    margin-left: 2px;
-    margin-right: 0px;
   }
 
   a:hover {
@@ -1185,12 +1180,12 @@ body {
 }
 
 /* --- MESSENGER --- */
-.search-friends {
+.delme-search-friends {
   margin-bottom: 10px;
   margin-top: 15px;
 }
 
-.messenger-block {
+.delme-messenger-block {
   border: 1px solid #DCE4EC;
   margin-bottom: 100px;
   box-shadow: @shadow;
@@ -1256,7 +1251,7 @@ body {
   }
 }
 
-.mess-bg {
+.delme-mess-bg {
   background-image: url("../images/develop-img.jpeg");
   background-size: cover;
   min-height: 100%;
@@ -1476,110 +1471,6 @@ body {
   }
 }
 
-.panel-scroll-chat {
-
-  ul {
-    list-style: none;
-  }
-
-  .mar-btm {
-    padding-bottom: 15px;
-  }
-
-  .pad-all {
-    padding: 15px;
-  }
-
-  .media-block .media-left {
-    display: block;
-    float: left;
-  }
-  .img-sm {
-    width: 46px;
-    height: 46px;
-  }
-  .media-block .media-body {
-    display: block;
-    overflow: hidden;
-    width: auto;
-  }
-  .pad-hor {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  .speech {
-    position: relative;
-    background: #b7dcfe;
-    color: #317787;
-    display: inline-block;
-    border-radius: 0;
-    padding: 12px 20px;
-    max-width: 100%;
-  }
-
-  p.speech-content {
-    width: 100%;
-    overflow-x: auto;
-  }
-
-  .speech:before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 0;
-    height: 0;
-    left: 0;
-    top: 0;
-    border-top: 7px solid transparent;
-    border-bottom: 7px solid transparent;
-    border-right: 7px solid #b7dcfe;
-    margin: 15px 0 0 -6px;
-  }
-  .speech-right > .speech:before {
-    left: auto;
-    right: 0;
-    border-top: 7px solid transparent;
-    border-bottom: 7px solid transparent;
-    border-left: 7px solid #ffdc91;
-    border-right: 0;
-    margin: 15px -6px 0 0;
-  }
-  .speech .media-heading {
-    font-size: 1.2em;
-    color: #317787;
-    display: block;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    font-weight: 300;
-  }
-  .speech-time {
-    margin-top: 20px;
-    margin-bottom: 0;
-    font-size: .8em;
-    font-weight: 300;
-  }
-  .media-block .media-right {
-    float: right;
-  }
-  .speech-right {
-    text-align: right;
-  }
-  .pad-hor {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  .speech-right > .speech {
-    background: #ffda87;
-    color: #a07617;
-    text-align: right;
-  }
-  .speech-right > .speech .media-heading {
-    color: #a07617;
-  }
-}
-
-
 #user_controller-controller {
   background-color: #212121;
   padding-bottom: 10px;
@@ -1593,3 +1484,5 @@ body {
     margin-top: 20px;
   }
 }
+
+@import "chat.less";
