--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -22,12 +22,13 @@
           rel='stylesheet' type='text/css'>
     <link href="{{ static_address('css/font-awesome.min.css') }}" rel="stylesheet">
     {% if g.debug %}
-        <link href="{{ static_address('css/bootstrap.css') }}" rel="stylesheet">
+        <link href="{{ static_address('new/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     {% else %}
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     {% endif %}
     <link href="{{ static_address('css/_profreader.css') }}" rel="stylesheet">
     <link href="{{ static_address('css/style.css') }}" rel="stylesheet">
+{#    <link href="{{ static_address('css/chat.css') }}" rel="stylesheet">#}
     <link href="{{ static_address('css/icons.css') }}" rel="stylesheet">
     <link href="{{ static_address('css/oles.css') }}" rel="stylesheet">
     {#    <link rel="stylesheet" type="text/css" href="/static/new/jquery-datetimepicker/jquery.datetimepicker.css">#}
