--- a/profapp/templates/general/user_profile.html
+++ b/profapp/templates/general/user_profile.html
@@ -16,7 +16,7 @@
     {{ raw }}
     <div class="container" ng-controller="user_profile" ng-cloak>
         <div class="row block-resp link-page"><h5>{{ _('User profile') }}</h5>
-            <a title="edit" pr_test="EditProfile" href="{{ url_for('user.edit_profile', user_id=user.id) }}" ng-if="actions.edit_user_profile">
+            <a title="edit" href="{{ url_for('user.edit_profile', user_id=user.id) }}" ng-if="actions.edit_user_profile">
                 <i class="fa fa-pencil fa-2x"></i>
             </a>
         </div>
