--- a/profapp/templates/messenger/messenger.html
+++ b/profapp/templates/messenger/messenger.html
@@ -456,6 +456,7 @@
                 pr_chat_socket.on('general_notification', function (resp) {
                     var new_message = resp['new_message'];
                     var new_notification = resp['new_notification'];
+                    console.log('new_notification', new_notification, unread);
                     var unread = resp['unread'];
                     var read_this_message = false;
                     var read_this_notification = false;
